Ensure anonymous:true still working

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,7 +22,7 @@ security:
 
         api:
             pattern: ^/api
-            anonymous: false
+            anonymous: true
             stateless: true
             guard:
                 authenticators:
